# dat-file-filter

./: .gitattributes  .gitignore  README.md  pyproject.toml
scripts/: update_clonelists.py
src/dat_file_filter/: __init__.py  application.py  attributes.py  clonelist.py  console.py  datfile.py  enums.py  game.py  grouping.py  metadata.py  stem.py  tags.py
src/dat_file_filter/clonelists/: NEC - PC Engine - TurboGrafx-16 (No-Intro).json  Nintendo - Family Computer Disk System (No-Intro).json  Nintendo - Nintendo Entertainment System (No-Intro).json  Nintendo - Super Nintendo Entertainment System (No-Intro).json  Sega - Mega Drive - Genesis (No-Intro).json  Sony - PlayStation 2 (Redump).json  Sony - PlayStation 3 (Redump).json  hash.json
tests/: test_cli.py  test_clonelist.py  test_datfile.py  test_game.py  test_grouping.py  test_metadata.py  test_package_version.py  test_stem.py
