[build-system]
requires = ["hatchling (>=1.29.0,<2.0.0)", "hatch-vcs (>=0.5.0,<1.0.0)"]
build-backend = "hatchling.build"

[project]
name = "dat-file-filter"
dynamic = ["version"]
description = "Parses, analyzes, and filters No-Intro/Redump game .dat files."
authors = [
    {name = "Jacob McIntosh", email = "nacitar.sevaht@gmail.com"}
]
readme = "README.md"
license = "Unlicense"
requires-python = ">=3.12"
keywords = ["dat", "no-intro", "redump", "roms", "games", "filter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Environment :: Console",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "rich>=14.0.0",
    "sevaht-utility>=1.0.0",
]

[project.scripts]
dat-file-filter = "dat_file_filter.__main__:main"

[project.urls]
Homepage = "https://github.com/nacitar/dat-file-filter"
Source = "https://github.com/nacitar/dat-file-filter"
Issues = "https://github.com/nacitar/dat-file-filter/issues"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "build (>=1.4.2,<2.0.0)",
    "mypy (>=1.20.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "ruff (>=0.15.8,<0.16.0)",
    "twine (>=6.2.0,<7.0.0)",
    "vulture (>=2.14,<3.0.0)",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

# Allow building before any tags/commits exist (fresh repo, or a source tree
# with no .git): hatch-vcs/setuptools-scm falls back to this instead of
# erroring. Real tags/commits override it, so this only matters pre-history.
[tool.hatch.version.raw-options]
fallback_version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/dat_file_filter"]

[tool.hatch.build.targets.sdist]
# Allowlist so dev/local files (.claude, checks, publish-test.sh, .github, ...)
# never leak into a published sdist. pyproject.toml/PKG-INFO/README/.gitignore
# are force-included by hatchling regardless.
include = ["/src", "/tests", "/LICENSE"]

[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.mypy]
strict = true
exclude = ["^dist/"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79
# Local scratch script carried over for reference; not part of the package.
extend-exclude = ["checks.py"]

[tool.ruff.lint]
extend-ignore = ["COM812", "COM819", "E203", "E501", "TD003"]
select = [
    "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C4", "C90", "COM",
    "DTZ", "E", "EM", "ERA", "F", "FA", "FLY", "FURB", "I",
    "ISC", "LOG", "N", "PERF", "PGH", "PIE", "PLR", "PLW", "PTH",
    "Q", "RET", "RSE", "RUF", "S", "SIM", "TC", "TCH", "TD",
    "TID", "TRY", "UP"
]

[tool.ruff.lint.per-file-ignores]
"checks" = ["S603"]
"tests/**/*" = ["PLR2004", "S101"]

[tool.vulture]
min_confidence = 70
